fix: CORS configurable via env var, fix login error msg, port from env